[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/sprites/spark.png" type="Texture" id=1]
[ext_resource path="res://assets/vapor/vapor_bg_2.glb" type="PackedScene" id=2]
[ext_resource path="res://assets/vapor/vapor_bg_3.glb" type="PackedScene" id=3]
[ext_resource path="res://assets/vapor/vapor_bg_1.glb" type="PackedScene" id=4]
[ext_resource path="res://assets/vapor/vapor_bg_4.glb" type="PackedScene" id=5]
[ext_resource path="res://scripts/ChartCore.gd" type="Script" id=6]
[ext_resource path="res://scripts/VaporCam.gd" type="Script" id=7]
[ext_resource path="res://scenes/CRT.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/sprites/paddle.png" type="Texture" id=9]
[ext_resource path="res://assets/MatchupPro.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://scenes/ScoreCounter.tscn" type="PackedScene" id=11]
[ext_resource path="res://scripts/ScreenBar_Bot.gd" type="Script" id=12]
[ext_resource path="res://scripts/PaddleArea.gd" type="Script" id=13]
[ext_resource path="res://scenes/GameOver.tscn" type="PackedScene" id=14]
[ext_resource path="res://scripts/Paddle.gd" type="Script" id=15]
[ext_resource path="res://scripts/Chart.gd" type="Script" id=16]
[ext_resource path="res://scripts/ScreenBar_Top.gd" type="Script" id=17]
[ext_resource path="res://assets/sprites/light_1.png" type="Texture" id=18]
[ext_resource path="res://scenes/PauseScreen.tscn" type="PackedScene" id=19]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 640, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 640, 10 )

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 0.5
emission_shape = 2
emission_box_extents = Vector3( 80, 0, 0 )
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_random = 1.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 16 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 24, 16 )

[sub_resource type="Animation" id=7]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="ProceduralSky" id=8]
sky_top_color = Color( 0.215686, 0, 0.294118, 1 )
sky_horizon_color = Color( 1, 0, 0.333333, 1 )
sky_energy = 0.75
ground_bottom_color = Color( 0.215686, 0, 0.294118, 1 )
ground_horizon_color = Color( 0.215686, 0, 0.294118, 1 )
sun_color = Color( 0.0980392, 0.0392157, 0.117647, 1 )
sun_latitude = 0.0
sun_longitude = 180.0
sun_energy = 5.0

[sub_resource type="Environment" id=9]
background_mode = 2
background_sky = SubResource( 8 )
background_color = Color( 0.980392, 0.529412, 1, 1 )
fog_enabled = true
fog_color = Color( 0, 0, 0, 1 )
fog_sun_color = Color( 0, 0, 0, 1 )
fog_sun_amount = 0.25
fog_depth_begin = 50.0
fog_depth_end = 300.0
tonemap_mode = 2
ss_reflections_enabled = true
ss_reflections_fade_in = 0.35
dof_blur_far_enabled = true
dof_blur_far_distance = 40.0
dof_blur_far_amount = 0.05

[node name="Chart" type="Node2D"]
script = ExtResource( 16 )

[node name="ChartCore" type="Node" parent="."]
script = ExtResource( 6 )
offset_1 = 1.125
offset_2 = 650.0
BPM = 130

[node name="NoteContainer" type="Node2D" parent="."]

[node name="CountdownLight" type="Light2D" parent="NoteContainer"]
position = Vector2( 640, 35 )
scale = Vector2( 5, 0.35 )
texture = ExtResource( 18 )

[node name="CountdownTimer" type="Timer" parent="."]

[node name="CountdownLabel" type="Label" parent="CountdownTimer"]
margin_left = 576.0
margin_top = 352.0
margin_right = 704.0
margin_bottom = 416.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="ChartTracker" type="KinematicBody2D" parent="."]

[node name="ChartCamera" type="Camera2D" parent="ChartTracker"]
position = Vector2( 640, 360 )
current = true
smoothing_speed = 100.0

[node name="ScreenBar_Top" type="Area2D" parent="ChartTracker/ChartCamera"]
position = Vector2( -640, -360 )
script = ExtResource( 17 )

[node name="BarShape" type="CollisionShape2D" parent="ChartTracker/ChartCamera/ScreenBar_Top"]
position = Vector2( 640, -8 )
shape = SubResource( 2 )

[node name="ScreenBar_Bot" type="Area2D" parent="ChartTracker/ChartCamera"]
position = Vector2( -640, -360 )
script = ExtResource( 12 )

[node name="BarShape" type="CollisionShape2D" parent="ChartTracker/ChartCamera/ScreenBar_Bot"]
position = Vector2( 640, 728 )
shape = SubResource( 3 )

[node name="Paddle" type="KinematicBody2D" parent="ChartTracker/ChartCamera"]
position = Vector2( 0, 280 )
scale = Vector2( 2, 0.5 )
script = ExtResource( 15 )

[node name="PaddleIcon" type="Sprite" parent="ChartTracker/ChartCamera/Paddle"]
position = Vector2( -1.04904e-05, 0 )
scale = Vector2( 0.25, 1 )
texture = ExtResource( 9 )

[node name="PaddlePart" type="Particles2D" parent="ChartTracker/ChartCamera/Paddle"]
visible = false
position = Vector2( 0, -20 )
rotation = 3.14159
scale = Vector2( 0.25, 1 )
lifetime = 2.0
process_material = SubResource( 4 )
texture = ExtResource( 1 )

[node name="PaddleColl" type="CollisionShape2D" parent="ChartTracker/ChartCamera/Paddle"]
position = Vector2( 0, 32 )
shape = SubResource( 5 )

[node name="PaddleArea" type="Area2D" parent="ChartTracker/ChartCamera/Paddle"]
script = ExtResource( 13 )

[node name="TopColl" type="CollisionShape2D" parent="ChartTracker/ChartCamera/Paddle/PaddleArea"]
position = Vector2( 0, -16 )
shape = SubResource( 6 )

[node name="PaddleLight" type="Light2D" parent="ChartTracker/ChartCamera/Paddle"]
scale = Vector2( 1, 15 )
texture = ExtResource( 18 )
texture_scale = 0.15
energy = 0.75

[node name="ScoreCounter" parent="ChartTracker/ChartCamera" instance=ExtResource( 11 )]

[node name="GameOver" parent="ChartTracker/ChartCamera" instance=ExtResource( 14 )]
visible = false

[node name="FadeOut" type="AnimationPlayer" parent="ChartTracker/ChartCamera"]
anims/FadeAnim = SubResource( 7 )

[node name="ColorRect" type="ColorRect" parent="ChartTracker/ChartCamera"]
margin_left = -640.0
margin_top = -360.0
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="VaporLight_1" type="Light2D" parent="ChartTracker"]
position = Vector2( 2.25, 360 )
texture = ExtResource( 18 )
texture_scale = 1.7

[node name="VaporLight_2" type="Light2D" parent="ChartTracker"]
position = Vector2( 1277.75, 360 )
texture = ExtResource( 18 )
texture_scale = 1.7

[node name="VaporLight_3" type="Light2D" parent="ChartTracker"]
visible = false
position = Vector2( 640, 360 )
texture = ExtResource( 18 )
texture_scale = 0.08

[node name="VaporCam" type="Camera" parent="."]
transform = Transform( -1, 0, -8.9407e-08, 0, 1, 0, 8.9407e-08, 0, -1, 0, 1, 0 )
script = ExtResource( 7 )
speed = -0.25

[node name="VaporSky" type="WorldEnvironment" parent="."]
environment = SubResource( 9 )

[node name="VaporScape" type="Spatial" parent="."]

[node name="vapor_chunk_1" type="Spatial" parent="VaporScape"]

[node name="vapor_bg_1" parent="VaporScape/vapor_chunk_1" instance=ExtResource( 4 )]

[node name="vapor_bg_2" parent="VaporScape/vapor_chunk_1" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 20 )

[node name="vapor_bg_3" parent="VaporScape/vapor_chunk_1" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 40 )

[node name="vapor_bg_4" parent="VaporScape/vapor_chunk_1" instance=ExtResource( 5 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 60 )

[node name="vapor_chunk_2" type="Spatial" parent="VaporScape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 80 )

[node name="vapor_bg_1" parent="VaporScape/vapor_chunk_2" instance=ExtResource( 4 )]

[node name="vapor_bg_2" parent="VaporScape/vapor_chunk_2" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 20 )

[node name="vapor_bg_3" parent="VaporScape/vapor_chunk_2" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 40 )

[node name="vapor_bg_4" parent="VaporScape/vapor_chunk_2" instance=ExtResource( 5 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 60 )

[node name="vapor_chunk_3" type="Spatial" parent="VaporScape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 160 )

[node name="vapor_bg_1" parent="VaporScape/vapor_chunk_3" instance=ExtResource( 4 )]

[node name="vapor_bg_2" parent="VaporScape/vapor_chunk_3" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 20 )

[node name="vapor_bg_3" parent="VaporScape/vapor_chunk_3" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 40 )

[node name="vapor_bg_4" parent="VaporScape/vapor_chunk_3" instance=ExtResource( 5 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 60 )

[node name="vapor_chunk_4" type="Spatial" parent="VaporScape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 240 )

[node name="vapor_bg_1" parent="VaporScape/vapor_chunk_4" instance=ExtResource( 4 )]

[node name="vapor_bg_2" parent="VaporScape/vapor_chunk_4" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 20 )

[node name="vapor_bg_3" parent="VaporScape/vapor_chunk_4" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 40 )

[node name="vapor_bg_4" parent="VaporScape/vapor_chunk_4" instance=ExtResource( 5 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 60 )

[node name="PauseScreen" parent="." instance=ExtResource( 19 )]
visible = false

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.27451, 0.27451, 0.27451, 1 )

[node name="CRT" parent="." instance=ExtResource( 8 )]

[connection signal="timeout" from="CountdownTimer" to="." method="_on_Countdown_timeout"]
[connection signal="animation_finished" from="ChartTracker/ChartCamera/FadeOut" to="." method="_on_FadeOut_animation_finished"]
